@@ -55,30 +55,30 @@ provided in @ref{Tuning output} and @ref{Interpretation context}. The
 syntactical details are described at the end of the manual.
 
 @menu
-* Overview::                    
-* Note entry::                  
-* Staff notation::              
-* Polyphony::                   
-* Beaming::                     
-* Expressive marks::            
-* Ornaments::                   
-* Repeats::                     
-* Rhythmic music::              
-* Piano music::                 
-* Lyrics::                      
-* Chords::                      
-* Writing parts::               
-* Custodes::                    
-* Figured bass::                
-* Tuning output::               
-* Page layout::                 
-* Output formats::              
-* Sound::                       
-* Music entry::                 
-* Skipping corrected music::    
-* Interpretation context::      
-* Syntactic details::           
-* Lexical details::             
+* Overview::			
+* Note entry::			
+* Staff notation::		
+* Polyphony::			
+* Beaming::			
+* Expressive marks::		
+* Ornaments::			
+* Repeats::			
+* Rhythmic music::		
+* Piano music::			
+* Lyrics::			
+* Chords::			
+* Writing parts::		
+* Custodes::			
+* Figured bass::		
+* Tuning output::		
+* Page layout::			
+* Output formats::		
+* Sound::			
+* Music entry::			
+* Skipping corrected music::	
+* Interpretation context::	
+* Syntactic details::		
+* Lexical details::		
 @end menu
 
 @c . {Overview}
@@ -140,15 +140,15 @@ brevity we omit obligatory lint such as @code{\score} blocks and
 
 
 @menu
-* Notes::                       
-* Pitches::                     
-* Rests::                       
-* Skips::                       
-* Durations::                   
-* Ties::                        
-* Tuplets::                     
-* Defining pitch names::        
-* Easy Notation note heads ::   
+* Notes::			
+* Pitches::			
+* Rests::			
+* Skips::			
+* Durations::			
+* Ties::			
+* Tuplets::			
+* Defining pitch names::	
+* Easy Notation note heads ::	
 @end menu
 
 @c . {Notes}
@@ -553,11 +553,11 @@ the @code{-f ps} option of lilypond produces the correct result.
 @cindex Staff notation
 
 @menu
-* Key signature::               
-* Clef::                        
-* Time signature::              
-* Unmetered music::             
-* Bar lines::                   
+* Key signature::		
+* Clef::			
+* Time signature::		
+* Unmetered music::		
+* Bar lines::			
 @end menu
 
 @c .  {Key}
@@ -1128,11 +1128,11 @@ horizontal, falls two staff spaces:
 
 @c .   {Slurs}
 @menu
-* Slurs ::                      
-* Phrasing slurs::              
-* Breath marks::                
-* Tempo::                       
-* Text spanners::               
+* Slurs ::			
+* Phrasing slurs::		
+* Breath marks::		
+* Tempo::			
+* Text spanners::		
 @end menu
 
 @node Slurs 
@@ -1296,11 +1296,11 @@ An application---or rather, a hack---is to fake octavation indications.
 @section Ornaments
 @cindex Ornaments
 @menu
-* Articulations::               
-* Text scripts::                
-* Grace notes::                 
-* Glissando ::                  
-* Dynamics::                    
+* Articulations::		
+* Text scripts::		
+* Grace notes::			
+* Glissando ::			
+* Dynamics::			
 @end menu
 
 @c .   {Articulation}
@@ -1637,11 +1637,11 @@ Make beat or measure repeats. These look like percent signs.
 @end table  
 
 @menu
-* Repeat syntax::               
-* Manual repeat commands::      
-* Tremolo repeats::             
-* Tremolo subdivisions::        
-* Measure repeats::             
+* Repeat syntax::		
+* Manual repeat commands::	
+* Tremolo repeats::		
+* Tremolo subdivisions::	
+* Measure repeats::		
 @end menu
 
 @node Repeat syntax
@@ -1700,11 +1700,13 @@ the specified number of repeats.
 }
 @end lilypond
 
-@subsection Unfolding repeats for MIDI output.
+@subsection Repeats and MIDI
+@subsection Repeats and MIDI
 
 @cindex expanding repeats
 
-See @file{input/test/unfold-all-repeats.ly}. 
+For instructions on how to unfoldi repeats for MIDI output, see
+the example file @file{input/test/unfold-all-repeats.ly}.
 
 
 @refbugs
@@ -1837,7 +1839,7 @@ with slashes, and repeating that measure with percents.
 
 
 @menu
-* Rhythmic staves::             
+* Rhythmic staves::		
 @end menu
 
 @node Rhythmic staves
@@ -1867,11 +1869,11 @@ behavior.  In this section we discuss the @internalsref{PianoStaff} and some
 other pianistic peculiarities.
 
 @menu
-* Automatic staff changes::     
-* Manual staff switches::       
-* Pedals::                      
-* Arpeggio::                    
-* Voice follower lines::        
+* Automatic staff changes::	
+* Manual staff switches::	
+* Pedals::			
+* Arpeggio::			
+* Voice follower lines::	
 @end menu 
 
 
@@ -1883,13 +1885,14 @@ other pianistic peculiarities.
 Voices can switch automatically between the top and the bottom
 staff. The syntax for this is
 @example
-        \autochange @var{contexttype} @var{musicexp}
-@end example
-This will switch the interpretation context of @var{musicexp} between a
-@var{contexttype} named @code{up} and @code{down}. Typically, you use
-@internalsref{Staff} for @var{contexttype}.  The autochanger switches on basis
-of pitch (central C is the turning point), and it looks ahead skipping
-over rests to switch rests in advance.
+        \autochange @var{contexttype} \context @var{childcontexttype}
+     		@var{musicexp} @end example This will switch the
+interpretation context of @var{musicexp} between a @var{contexttype}
+named @code{up} and @code{down}. Typically, you use
+@internalsref{Staff} for @var{contexttype}, and @internalsref{Voice}
+for @var{childcontexttype}. The autochanger switches on basis of pitch
+(central C is the turning point), and it looks ahead skipping over
+rests to switch rests in advance.
         
 @lilypond[verbatim,singleline]
 \score { \notes \context PianoStaff <
@@ -2092,10 +2095,10 @@ The associated grob is @internalsref{VoiceFollower}.
 
 
 @menu
-* Lyrics mode::                 
-* Printing lyrics::             
+* Lyrics mode::			
+* Printing lyrics::		
 * Automatic syllable durations::  
-* More stanzas::                
+* More stanzas::		
 @end menu
 
 @c .  {Lyrics mode}
@@ -2320,8 +2323,8 @@ not attempt to be intelligent. If you enter @code{f bes d}, it does not
 interpret this as an inversion.
 
 @menu
-* Chords mode::                 
-* Printing named chords::       
+* Chords mode::			
+* Printing named chords::	
 @end menu
 
 @c .  {Chords mode}
@@ -2542,14 +2545,14 @@ problems in orchestral music.
 
 @c .  {Transpose}
 @menu
-* Rehearsal marks::             
-* Bar numbers::                 
-* Instrument names::            
-* Transpose::                   
+* Rehearsal marks::		
+* Bar numbers::			
+* Instrument names::		
+* Transpose::			
 * Sound output for transposing instruments::  
-* Multi measure rests::         
-* Automatic part combining::    
-* Hara kiri staves::            
+* Multi measure rests::		
+* Automatic part combining::	
+* Hara kiri staves::		
 @end menu
 
 @c .   {Rehearsal marks}
@@ -2935,13 +2938,13 @@ affecting a whole set of objects.  Second, you can select one specific
 object, and set a grob property in that object.
 
 @menu
-* Tuning groups of grobs ::     
-* Tuning per grob ::            
-* What to tune?::               
-* Font selection::              
-* Text markup::                 
-* Invisible grobs::             
-* Dirty tricks::                
+* Tuning groups of grobs ::	
+* Tuning per grob ::		
+* What to tune?::		
+* Font selection::		
+* Text markup::			
+* Invisible grobs::		
+* Dirty tricks::		
 @end menu
 
 @node Tuning groups of grobs 
@@ -3487,13 +3490,13 @@ and (La)@TeX{} putting the notation on a page, including page breaks.
 The part of LilyPond is documented here.
 
 @menu
-* Paper block::                 
-* Paper variables::             
-* Font Size::                   
-* Paper size::                  
-* Line break::                  
-* Page break::                  
-* Output scaling::              
+* Paper block::			
+* Paper variables::		
+* Font Size::			
+* Paper size::			
+* Line break::			
+* Page break::			
+* Output scaling::		
 @end menu
 
 @c .  {Paper block}
@@ -3743,10 +3746,10 @@ meaning that you don't have access to continuously scaled fonts.
 LilyPond can output processed music in different output formats.  
 
 @menu
-* TeX output::                  
-* PostScript output::           
-* Scheme output::               
-* ASCIIScript output::          
+* TeX output::			
+* PostScript output::		
+* Scheme output::		
+* ASCIIScript output::		
 @end menu
 
 @node TeX output
@@ -3930,8 +3933,8 @@ It is currently not possible to use the percussion channel (generally
 channel 10 of a MIDI file).
 
 @menu
-* MIDI block::                  
-* MIDI instrument names::       
+* MIDI block::			
+* MIDI instrument names::	
 @end menu
 
 @c .  {MIDI block}
@@ -3991,9 +3994,9 @@ number.
 @section Music entry
 @cindex Music entry
 @menu
-* Relative::                    
-* Bar check::                   
-* Point and click::             
+* Relative::			
+* Bar check::			
+* Point and click::		
 @end menu
 
 When entering music with LilyPond, it is easy to introduce errors. This
@@ -4211,12 +4214,12 @@ c d b bes a g c2 }
 @section Interpretation context
 
 @menu
-* Creating contexts::           
-* Default contexts::            
-* Context properties::          
-* Engravers and performers::    
+* Creating contexts::		
+* Default contexts::		
+* Context properties::		
+* Engravers and performers::	
 * Changing context definitions::  
-* Defining new contexts::       
+* Defining new contexts::	
 @end menu
 
 
@@ -4563,13 +4566,13 @@ such an identifier outside of @code{\score}, you must do
 This section describes details that were too boring to be put elsewhere.
 
 @menu
-* Top level::                   
-* Identifiers::                 
-* Music expressions::           
+* Top level::			
+* Identifiers::			
+* Music expressions::		
 * Manipulating music expressions::  
-* Assignments::                 
-* Lexical modes::               
-* Ambiguities::                 
+* Assignments::			
+* Lexical modes::		
+* Ambiguities::			
 @end menu
 
 @c .  {Top level}
@@ -4808,7 +4811,7 @@ More examples are given in the distributed example files in
 
 @c .   {Span requests}
 @menu
-* Span requests::               
+* Span requests::		
 @end menu
 
 @node Span requests
@@ -4967,15 +4970,15 @@ right time between
 Even more boring details, now on lexical side of the input parser.
 
 @menu
-* Comments::                    
-* Direct Scheme::               
-* Keywords::                    
-* Integers::                    
-* Reals::                       
-* Strings::                     
-* Main input::                  
-* File inclusion::              
-* Version information::         
+* Comments::			
+* Direct Scheme::		
+* Keywords::			
+* Integers::			
+* Reals::			
+* Strings::			
+* Main input::			
+* File inclusion::		
+* Version information::		
 @end menu
 
 
