@@ -1,0 +1,3 @@
+
+
+\score{ \notes {[g'' <e'''8 g> g''] }}
