@@ -14,7 +14,7 @@ if the black note heads are from 8th or shorter notes.
     
     \property Staff.NoteCollision \override #'merge-differently-headed = ##t
     c2
-    c4. c8
+    c8 c4.
     c2
 }
 \context Voice = VB {
