@@ -25,7 +25,7 @@ Relative_octave_music::Relative_octave_music (SCM l)
 
 Relative_octave_music::Relative_octave_music ()
 {
-    set_mus_property ("type", ly_symbol2scm ("relative-octave-music"));
+  set_mus_property ("type", ly_symbol2scm ("relative-octave-music"));
 }
 
 ADD_MUSIC (Relative_octave_music);
